==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_TOSHIBA/TARGET_TMPM46B/serial_api.c <==
#include <string.h>
#include "serial_api.h"
#include "PeripheralNames.h"
#include "pinmap.h"
#include "tmpm46b_uart.h"
#include "tmpm46b_fuart.h"
#define UART_NUM                      6
#define FUART_INT_BITS                0x07FF

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    int is_stdio_uart = 0;

    UARTName uart_tx = (UARTName)pinmap_peripheral(tx, PinMap_UART_TX);
    UARTName uart_rx = (UARTName)pinmap_peripheral(rx, PinMap_UART_RX);
    UARTName uart_name = (UARTName)pinmap_merge(uart_tx, uart_rx);
    MBED_ASSERT((int)uart_name != NC);

    obj->index = uart_name;
    // Initialize UART instance
    switch (uart_name) {
        case SERIAL_0:
            obj->UARTx = UART0;
            serial_init_UART_configure(SERIAL_0, obj, tx, rx);
            break;
        case SERIAL_1:
            obj->UARTx = UART1;
            serial_init_UART_configure(SERIAL_1, obj, tx, rx);
            break;
        case SERIAL_2:
            obj->UARTx = UART2;
            serial_init_UART_configure(SERIAL_2, obj, tx, rx);
            break;
        case SERIAL_3:
            obj->UARTx = UART3;
            serial_init_UART_configure(SERIAL_3, obj, tx, rx);
            break;
        case SERIAL_4:
            obj->FUART = FUART0;
            serial_init_UART_configure(SERIAL_4, obj, tx, rx);
            break;
        case SERIAL_5:
            obj->FUART = FUART1;
            serial_init_UART_configure(SERIAL_5, obj, tx, rx);
            break;
        default:
            break;
    }

    is_stdio_uart = (uart_name == STDIO_UART) ? (1) : (0);

    if (is_stdio_uart) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

void serial_baud(serial_t *obj, int baudrate)
{
    switch (obj->index) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            obj->uart_config.BaudRate = baudrate;
            UART_Init(obj->UARTx,&obj->uart_config);
            break;
        case SERIAL_4:
        case SERIAL_5:
            FUART_Disable(obj->FUART);
            obj->fuart_config.BaudRate = baudrate;
            FUART_Init(obj->FUART,&obj->fuart_config);
            FUART_Enable(obj->FUART);
            break;
        default:
            break;
    }
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    // 0: 1 stop bits, 1: 2 stop bits
    MBED_ASSERT((stop_bits == 1) || (stop_bits == 2));
    MBED_ASSERT((parity == ParityNone) || (parity == ParityOdd) || (parity == ParityEven) ||
                (parity == ParityForced1) || (parity == ParityForced0));
    // 0: 7 data bits ... 2: 9 data bits
    switch (obj->index) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            MBED_ASSERT((data_bits > 6) && (data_bits < 10)); // 0: 7 data bits ... 2: 9 data bits
            obj->uart_config.DataBits = ((data_bits == 7) ? UART_DATA_BITS_7:
                                         ((data_bits == 8) ? UART_DATA_BITS_8 : UART_DATA_BITS_9));
            obj->uart_config.StopBits = ((stop_bits == 1) ? UART_STOP_BITS_1 : UART_STOP_BITS_2);
            obj->uart_config.Parity = ((parity == ParityOdd) ? UART_ODD_PARITY :
                                       ((parity == ParityEven) ? UART_EVEN_PARITY : UART_NO_PARITY));
            UART_Init(obj->UARTx,&obj->uart_config);
            break;
        case SERIAL_4:
        case SERIAL_5:
            FUART_Disable(obj->FUART);
            MBED_ASSERT((data_bits > 6) && (data_bits < 9)); // 0: 5 data bits ... 2: 8 data bits
            obj->fuart_config.DataBits = ((data_bits == 7) ? FUART_DATA_BITS_7 : FUART_DATA_BITS_8);
            obj->fuart_config.StopBits = ((stop_bits == 1) ? FUART_STOP_BITS_1 : FUART_STOP_BITS_2);
            obj->fuart_config.Parity = ((parity == ParityOdd) ? FUART_ODD_PARITY :
                                        ((parity == ParityEven) ? FUART_EVEN_PARITY :
                                         ((parity == ParityForced1) ? FUART_1_PARITY :
                                          ((parity == ParityForced0) ? FUART_0_PARITY : FUART_NO_PARITY))));
            FUART_Init(obj->FUART,&obj->fuart_config);
            FUART_Enable(obj->FUART);
            break;
        default:
            break;
    }
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    IRQn_Type irq_n = (IRQn_Type)0;
    uint32_t int_mask = 0;

    switch (obj->index) {
        case SERIAL_0:
            if (irq == RxIrq) {
                irq_n = INTRX0_IRQn;
            } else {
                irq_n = INTTX0_IRQn;
            }
            break;
        case SERIAL_1:
            if (irq == RxIrq) {
                irq_n = INTRX1_IRQn;
            } else {
                irq_n = INTTX1_IRQn;
            }
            break;
        case SERIAL_2:
            if (irq == RxIrq) {
                irq_n = INTRX2_IRQn;
            } else {
                irq_n = INTTX2_IRQn;
            }
            break;
        case SERIAL_3:
            if (irq == RxIrq) {
                irq_n = INTRX3_IRQn;
            } else {
                irq_n = INTTX3_IRQn;
            }
            break;
        case SERIAL_4:
            irq_n = INTUART0_IRQn;
            break;
        case SERIAL_5:
            irq_n = INTUART1_IRQn;
            break;
        default:
            break;
    }

    if ((obj->index == SERIAL_4) || (obj->index == SERIAL_5)) {
        // Get interrupt mask
        int_mask = obj->FUART->IMSC & FUART_INT_BITS;

        // Set interrupt mask
        if (irq == RxIrq) {
            int_mask |= FUART_RX_FIFO_INT_MASK;
        } else {
            int_mask |= FUART_TX_FIFO_INT_MASK;
        }
        FUART_SetINTMask(obj->FUART, int_mask);
    }

    if (enable) {
        NVIC_EnableIRQ(irq_n);
    } else {
        NVIC_DisableIRQ(irq_n);
    }
}

int serial_getc(serial_t *obj)
{
    int data = 0;

    // Wait until Rx buffer is full
    while (!serial_readable(obj)) {
        // Do nothing
    }
    switch (obj->index) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            data = (int) UART_GetRxData(obj->UARTx);
            break;
        case SERIAL_4:
        case SERIAL_5:
            data = (int) FUART_GetRxData(obj->FUART);
            break;
        default:
            break;
    }
    return data;
}

void serial_putc(serial_t *obj, int c)
{
    // Wait until Tx buffer is empty
    while (!serial_writable(obj)) {
        // Do nothing
    }

    switch (obj->index) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            UART_SetTxData(obj->UARTx,(uint32_t)c);
            break;
        case SERIAL_4:
        case SERIAL_5:
            FUART_SetTxData(obj->FUART,(uint32_t)c);
            break;
        default:
            break;
    }
}

int serial_readable(serial_t *obj)
{
    int ret = 0;

    switch (obj->index) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            if (UART_GetBufState(obj->UARTx, UART_RX) == DONE) {
                ret = 1;
            }
            break;
        case SERIAL_4:
        case SERIAL_5:
            if (FUART_GetStorageStatus(obj->FUART, FUART_RX) == FUART_STORAGE_FULL) {
                ret = 1;
            }
            break;
        default:
            break;
    }
    return ret;
}

int serial_writable(serial_t *obj)
{
    int ret = 0;

    switch (obj->index) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            if (UART_GetBufState(obj->UARTx, UART_TX) == DONE) {
                ret = 1;
            }
            break;
        case SERIAL_4:
        case SERIAL_5:
            if (FUART_GetStorageStatus(obj->FUART, FUART_TX) == FUART_STORAGE_EMPTY) {
                ret = 1;
            }
            break;
        default:
            break;
    }
    return ret;
}

void serial_clear(serial_t *obj)
{
    switch (obj->index) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            UART_GetRxData(obj->UARTx);
            break;
        case SERIAL_4:
        case SERIAL_5:
            FUART_GetRxData(obj->FUART);
            break;
        default:
            break;
    }
}

void serial_set_flow_control(serial_t *obj, FlowControl type, PinName rxflow, PinName txflow)
{
    UARTName uart_rts = (UARTName)pinmap_peripheral(rxflow, PinMap_UART_RTS);
    UARTName uart_cts;

    // SERIAL_5 & SERIAL_3 have same CTS pin (PA7), only function register is different (4 & 2).
    // pinmap_peripheral() will always return first match from the map.
    // But, if SERIAL_5 is used, then pinmap_peripheral() should return SERIAL_5 (function register 2 to be set).
    if (obj->index == SERIAL_5) {
        uart_cts = (UARTName)pinmap_peripheral(txflow, &PinMap_UART_CTS[5]);
    } else {
        uart_cts = (UARTName)pinmap_peripheral(txflow, PinMap_UART_CTS);
    }
    UARTName uart_name = (UARTName)pinmap_merge(uart_cts, uart_rts);

    switch (uart_name) {
        case SERIAL_0:
        case SERIAL_1:
        case SERIAL_2:
        case SERIAL_3:
            if (FlowControlCTS == type) {
                MBED_ASSERT(uart_cts != (UARTName) NC);

                // Enable the pin for CTS function
                pinmap_pinout(txflow, PinMap_UART_CTS);

                // Support CTS hardware control flow only
                obj->UARTx->MOD0 |= 1 << 6;
            } else {
                // Disable hardware flow control
                obj->UARTx->MOD0 &= !(1 << 6);
            }
            break;
        case SERIAL_4:
        case SERIAL_5:
            FUART_Disable(obj->FUART);
            if (type == FlowControlCTS) {
                MBED_ASSERT(uart_cts != (UARTName) NC);

                // Enable CTS hardware flow control
                obj->FUART->CR |= FUART_CTS_FLOW_CTRL;

                // Enable the pin for CTS and RTS function
                if (uart_name == SERIAL_5) {
                    pinmap_pinout(txflow, &PinMap_UART_CTS[5]);
                } else {
                    pinmap_pinout(txflow, PinMap_UART_CTS);
                }
            } else if (type == FlowControlRTS) {
                MBED_ASSERT(uart_rts != (UARTName) NC);

                // Enable RTS hardware flow control
                obj->FUART->CR |= FUART_RTS_FLOW_CTRL;

                // Enable the pin for RTS function
                pinmap_pinout(rxflow, PinMap_UART_RTS);
            } else if (type == FlowControlRTSCTS) {
                MBED_ASSERT(uart_name != (UARTName) NC);

                // Enable CTS and RTS hardware flow control
                obj->FUART->CR |= FUART_CTS_FLOW_CTRL | FUART_RTS_FLOW_CTRL;

                // Enable the pin for CTS and RTS function
                if (uart_name == SERIAL_5) {
                    pinmap_pinout(txflow, &PinMap_UART_CTS[5]);
                } else {
                    pinmap_pinout(txflow, PinMap_UART_CTS);
                }
                pinmap_pinout(rxflow, PinMap_UART_RTS);
            } else {
                // Disable CTS and RTS hardware flow control
                obj->FUART->CR &= (uint32_t) 0xFFFF0FFF;
            }
            FUART_Enable(obj->FUART);
            break;
        default:
            break;
    }
}

void serial_break_set(serial_t *obj)
{
    if (obj->index == SERIAL_4 || obj->index == SERIAL_5) {
        FUART_SetSendBreak(obj->FUART, ENABLE);
    }
}

void serial_break_clear(serial_t *obj)
{
    if (obj->index == SERIAL_4 || obj->index == SERIAL_5) {
        FUART_SetSendBreak(obj->FUART, DISABLE);
    }
}
